--- a/package.json
+++ b/package.json
@@ -2,8 +2,33 @@
   "name": "gulp-temp",
   "version": "1.0.0",
   "description": "Gulp сборка",
-  "scripts": {},
+  "scripts": {
+    "dev": "gulp watch",
+    "build:dev": "gulp build",
+    "build:prod": "gulp build --prod",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": "eslint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "keywords": [],
   "author": "",
-  "license": "WTFPL"
+  "license": "WTFPL",
+  "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/eslint-parser": "^7.13.14",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/register": "^7.13.16",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "gulp": "^4.0.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4"
+  }
 }
